[tool.poetry]
name = "outfit-square"
version = "0.1.0"
description = ""
authors = ["augustine <augustino0890@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "^2.5.0"
python-dotenv = "^1.0.1"
autopep8 = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
