[tool.poetry]
name = "outfit-square"
version = "0.1.0"
description = ""
authors = ["augustine <augustino0890@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "^2.5.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.3"
pymongo = "^4.6.2"
apscheduler = "^3.10.4"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
